k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wpk8s-ui-svc
  namespace: wpk8s
  labels:
    app: wpk8s-ui
spec:
  ports:
    - port: 443
      targetPort: 3000
  selector:
    app: wpk8s-ui
