k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wpk8s-ui-ing
  namespace: wpk8s
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wpk8s.com
      secretName: wpk8s-ui-tls
  rules:
    - host: wpk8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wpk8s-ui-svc
                port:
                  number: 443
